Prevent image from overflowing

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -22,8 +22,14 @@ header .branding .mtdj__logo {
    color: transparent;
 }
 
+#primary .content-area .site-main .clr-col-6.mtdj__landingpage_img_container {
+   display: flex;
+   justify-content: center;
+}
+
 #primary .content-area .site-main img.mtdj__landingpage_img {
-   width: 100%
+   height: 100%;
+   max-height: 800px;
 }
 
 footer .container {
